fix navswitch buttons in desktop alignment

--- a/styles.css
+++ b/styles.css
@@ -143,8 +143,8 @@ footer {
 
     .nav-switch {
         position: fixed;
-        top: 10px;
-        right: 10px;
+        top: 22px;
+        right: 22px;
     }
 
     footer {
@@ -155,6 +155,7 @@ footer {
     header {
         width: 100%;
         position: fixed;
+        top: 0px;
     }
 
 
@@ -178,5 +179,8 @@ footer {
         display: flex;
     }
 
+    .contact-details {
+        margin-top: 100px;
+    }
 
 }
